Update table layout and styling in Index.cshtml

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -42,13 +42,17 @@
 
     </div>
 
-    <div>
-        <table id="song-table" class="table">
-            <tr><thead><th scope="col">Artist</th><th scope="col">Album</th><th scope="col">Song</th></thead></tr>
-            <tbody id="tbody">
+    <div class="border">
+            <table class="table">
+                <tr><thead class="bg-info"><th scope="col" >Artist</th><th scope="col">Album</th><th scope="col">Song</th></thead></tr>
+            </table>
+        <div class="overflow-auto" style="max-height: 300px;">
+            <table id="song-table" class="table">
+                <tbody id="tbody">
 
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
