--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Music Streamer - 1 AM eternal</h1>
+    <h1 class="display-4">Simple Streamer</h1>
 </div>
 
 <div class="container">
